syntax = "proto3";

package api.note_purchase_agreement.v1;

import "api/auth/v1/auth.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/vireocloud/property-pros-sdk/api/notepurchaseagreement/v1;notepurchaseagreement";

message RecordRequestPayload {
  string id = 1;
}

message RecordRequestCollection {
  repeated RecordRequestPayload payload = 1;
}

message RecordCollection {
  repeated RecordResultPayload payload = 1;
}

message RecordResultPayload {
  string id = 1;
  string created_on = 2;
}

message NotePurchaseAgreementRecord {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string date_of_birth = 4;
  string home_address = 5;
  api.auth.v1.User user = 6;
  string phone_number = 7;
  string social_security = 8;
  uint64 funds_committed = 9;
  bytes file_content = 10;
  string created_on = 11;
}

message GetNotePurchaseAgreementRequest {
  RecordRequestPayload payload = 1;
}

message GetNotePurchaseAgreementResponse {
  NotePurchaseAgreementRecord payload = 1;
}

message GetNotePurchaseAgreementDocRequest {
  NotePurchaseAgreementRecord payload = 1;
}

message GetNotePurchaseAgreementDocResponse {
  bytes file_content = 1;
}

message GetNotePurchaseAgreementsRequest {}

message GetNotePurchaseAgreementsResponse {
  RecordCollection payload = 1;
}

message SaveNotePurchaseAgreementRequest {
  NotePurchaseAgreementRecord payload = 1;
}

message SaveNotePurchaseAgreementResponse {
  RecordResultPayload payload = 1;
}

service NotePurchaseAgreementService {
  rpc GetNotePurchaseAgreements(GetNotePurchaseAgreementsRequest) returns (GetNotePurchaseAgreementsResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /config
      get: "/v1/notepurchaseagreements"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get All Note Purchase Agreement Document Records"
      description: "Gets note purchase agreement records with limited data."
      tags: "NotePurchaseAgreement"
    };
  }

  rpc GetNotePurchaseAgreement(GetNotePurchaseAgreementRequest) returns (GetNotePurchaseAgreementResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /config
      get: "/v1/notepurchaseagreement"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Note Purchase Agreement Record"
      description: "Gets a note purchase agreement full record data."
      tags: "NotePurchaseAgreement"
    };
  }

  rpc SaveNotePurchaseAgreement(SaveNotePurchaseAgreementRequest) returns (SaveNotePurchaseAgreementResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /config
      post: "/v1/notepurchaseagreement"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Save Note Purchase Agreement Record"
      description: "Saves a note purchase agreement filled out with customer data."
      tags: "NotePurchaseAgreement"
    };
  }

  rpc GetNotePurchaseAgreementDoc(GetNotePurchaseAgreementDocRequest) returns (GetNotePurchaseAgreementDocResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /config
      get: "/v1/notepurchaseagreement/file"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Note Purchase Agreement Document File Only"
      description: "Gets a note purchase agreement document file only.  No record data otherwise."
      tags: "NotePurchaseAgreement"
    };
  }
}
